--- a/s-laboral.html
+++ b/s-laboral.html
@@ -85,7 +85,7 @@
 
   <main class="main">
     <!-- Page Title -->
-    <!-- <div class="page-title dark-background" data-aos="fade">
+    <div class="page-title dark-background" data-aos="fade">
       <div class="container">
         <nav class="breadcrumbs">
           <ol>
@@ -95,7 +95,7 @@
         </nav>
         <h1>Servcio</h1>
       </div>
-    </div> -->
+    </div>
     <!-- End Page Title -->
     <!-- Service Details Section -->
     <section id="service-details" class="service-details section">
