--- a/s-seguro.html
+++ b/s-seguro.html
@@ -82,7 +82,7 @@
 
   <main class="main">
     <!-- Page Title -->
-    <!-- <div class="page-title dark-background" data-aos="fade">
+    <div class="page-title dark-background" data-aos="fade">
       <div class="container">
         <nav class="breadcrumbs">
           <ol>
@@ -92,7 +92,8 @@
         </nav>
         <h1>Servcio</h1>
       </div>
-    </div> --><!-- End Page Title -->
+    </div>
+    <!-- End Page Title -->
 
     <!-- Service Details Section -->
     <section id="service-details" class="service-details section">
