--- a/s-laboral.html
+++ b/s-laboral.html
@@ -90,10 +90,10 @@
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Inicio</a></li>
-            <li class="current">Servicio</li>
+            <li class="current"><a href="index.html#services">Servicio</a></li>
           </ol>
         </nav>
-        <h1>Servcio</h1>
+        <h1>Derecho Laboral</h1>
       </div>
     </div>
     <!-- End Page Title -->
