--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="row justify-content-start">
           <div class="col-lg-8">
             <h2>Bienvenidos a Abogados García Aguilar & Asociados</h2>
-            <p>Un equipo legal que no conoce límites en la defensa de tus intereses, defendiendo tus derechos con pasión, precisión y legalidad con resultados tangibles.</p>
+            <p>Porque la experiencia importa</p>
             <p></p>
             <a href="#about" class="btn-get-started">Iniciar</a>
           </div>
