--- a/s-fiscal.html
+++ b/s-fiscal.html
@@ -74,7 +74,7 @@
                 <li><a href="s-medico.html">Negligencia Medica</a></li>
               </ul>
             </li>
-            <li><a href="#contact">Contacto</a></li>
+            <li><a href="index.html#contact">Contacto</a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
@@ -95,7 +95,6 @@
             <li class="current"><a href="index.html#services">Servicio</a></li>
           </ol>
         </nav>
-        <h1>Derecho Fiscal</h1>
       </div>
     </div>
     <!-- End Page Title -->
