--- a/s-laboral.html
+++ b/s-laboral.html
@@ -73,7 +73,7 @@
                 <li><a href="s-medico.html">Negligencia Medica</a></li>
               </ul>
             </li>
-            <li><a href="#contact">Contacto</a></li>
+            <li><a href="index.html#contact">Contacto</a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
@@ -93,7 +93,6 @@
             <li class="current"><a href="index.html#services">Servicio</a></li>
           </ol>
         </nav>
-        <h1>Derecho Laboral</h1>
       </div>
     </div>
     <!-- End Page Title -->
