--- a/s-fiscal.html
+++ b/s-fiscal.html
@@ -46,8 +46,8 @@
         <div class="contact-info d-flex align-items-center">
           <i class="bi bi-phone d-flex align-items-center ms-4">
             <div>
-              <span class="contact-info-tel">55 8103 0007</span>
-              <span class="contact-info-tel">72 2647 6912</span>
+              <a href="tel:+525581030007"><span class="contact-info-tel">55 8103 0007</span></a>
+              <a href="tel:+5272264769127"><span class="contact-info-tel">72 2647 6912</span></a>
             </div>
           </i>
         </div>
