--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
       <div class="container section-title" data-aos="fade-up">
         <span>Contacto</span>
         <h2>Contacto</h2>
-        <p>Atendemos a nuestros representandos en toda la Republica Mexicana de forma presencial o atravez de ZOOM.</p>
+        <p>Atendemos a nuestros representandos en toda la República Mexicana de forma presencial o a través de ZOOM.</p>
         <br>
         <p>Le pedimos por favor, agendar previamente una cita, para atenderlo como Usted se merece</p>
       </div><!-- End Section Title -->
