--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <div class="contact-info d-flex align-items-center">
           <i class="bi bi-phone d-flex align-items-center ms-4">
             <div>
-              <a href="tel:+525581030007"><span class="contact-info-tel">55 8103 0007</span></a>
-              <a href="tel:+5272264769127"><span class="contact-info-tel">72 2647 6912</span></a>
+              <span><a href="tel:+525581030007" class="contact-info-tel"></a>55 8103 0007</span>
+              <span><a href="tel:+527226476912" class="contact-info-tel"></a>72 2647 6912</span>
             </div>
           </i>
         </div>
@@ -122,12 +122,12 @@
               Socio fundador
             </p> -->
             <ul>
-              <li><!-- <i class="bi bi-check-circle"></i> --> Su experiencia profesional y el equipo de abogados expertos con que cuenta nuestra Firma, nos posiciona como un despacho de especialistas en <span>Derecho Laboral, Derecho de la Seguridad Social, Derecho Fiscal y Asuntos de Negligencia Médica</span>.</li>
-              <li><!-- <i class="bi bi-check-circle"></i> --> Nuestro Socio fundador se desempeño dentro del Instituto Mexicano del Seguro Social como:</li>
+              <li><!-- <i class="bi bi-check-circle"></i> --> Su experiencia profesional y el equipo de abogados expertos con que contamos, nos posiciona como un despacho de especialistas en <span>Derecho Laboral, Derecho de la Seguridad Social, Derecho Fiscal y Asuntos de Negligencia Médica</span>.</li>
+              <li><!-- <i class="bi bi-check-circle"></i> --> Nuestro Socio fundador se desempeñó dentro del Instituto Mexicano del Seguro Social como:</li>
               <li><i class="bi bi-check-circle"></i> Jefe de Servicios Jurídicos en la Delegación del IMSS en el Estado de Morelos.</li>
               <li><i class="bi bi-check-circle"></i> Subdelegado en la Delegación del IMSS en el Estado de Hidalgo.</li>
               <li><i class="bi bi-check-circle"></i> Encargado del Despacho de la Delegación del IMSS en el Estado de Chiapas.</li>
-              <li><i class="bi bi-check-circle"></i> Jefe de Servicios Jurídicos en la Delegación del IMSS en el Estado de Chiapas</li>
+              <li><i class="bi bi-check-circle"></i> Jefe de Servicios Jurídicos en la Delegación del IMSS en el Estado de Chiapas.</li>
               <li><i class="bi bi-check-circle"></i> Coordinador de Programas en la División Normativa de Investigaciones Laborales de la Dirección Jurídica del IMSS en la Ciudad de México.</li>
               <li><i class="bi bi-check-circle"></i> Encargado de la Oficina de Averiguaciones Previas y Juicios Penales en la Jefatura de Servicios Jurídicos de la Delegación del IMSS en el Estado de México Poniente.</li>
               <li><i class="bi bi-check-circle"></i> Abogado Procurador en la Jefatura de Servicios Jurídicos de la Delegación del IMSS en el Estado de México Poniente.</li>
@@ -157,8 +157,9 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="service-item position-relative">
               <h3>Valores</h3>
-              <p>Lealtad y Honestidad.  Al honrar estos valores, en Abogados García Aguilar & AsociadosS, nuestros colaboradores se comprometen a hacer y dar lo mejor entre sí y a cada uno de nuestros clientes.</p>
-            <p>Ética Personal y Profesional. Nuestra Firma reconoce y cuida la dimensión ética de todas sus decisiones, opiniones y recomendaciones. Para nosotros es fundamental aplicar los principios éticos y morales en todas sus prácticas profesionales y acciones personales, en consecuencia, ofrece y exige a sus colaboradores un comportamiento justo y ético.</p>
+              <p>Lealtad y Honestidad.  Al honrar estos valores, en Abogados García Aguilar & Asociados, nuestros colaboradores se comprometen a hacer y dar lo mejor entre sí y a cada uno de nuestros clientes.</p>
+              <br>
+              <p>Ética Personal y Profesional. Nuestra Firma reconoce y cuida la dimensión ética de todas sus decisiones, opiniones y recomendaciones. Para nosotros es fundamental aplicar los principios éticos y morales en todas sus prácticas profesionales y acciones personales, en consecuencia, ofrece y exige a sus colaboradores un comportamiento justo y ético.</p>
             </div>
           </div><!-- End Service Item -->
         </div>
