--- a/s-laboral.html
+++ b/s-laboral.html
@@ -46,8 +46,8 @@
         <div class="contact-info d-flex align-items-center">
           <i class="bi bi-phone d-flex align-items-center ms-4">
             <div>
-              <a href="tel:+525581030007"><span class="contact-info-tel">55 8103 0007</span></a>
-              <a href="tel:+5272264769127"><span class="contact-info-tel">72 2647 6912</span></a>
+              <span><a href="tel:+525581030007" class="contact-info-tel"></a>55 8103 0007</span>
+              <span><a href="tel:+527226476912" class="contact-info-tel"></a>72 2647 6912</span>
             </div>
           </i>
         </div>
@@ -109,95 +109,112 @@
           <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
             <img src="assets/img/dl.jpg" alt="" class="img-fluid services-img">
             <h3>Si usted desea acceder a ellos, le sugerimos contactarnos para obtener asesoría laboral y de ser el caso, un representante legal.</h3>
-            <p>
-              Algunas de las situaciones más frecuentes en las que sería conveniente buscar nuestra representación en materia laboral: <span>Despepido, Violación a las condiciones de trabajo y Acoso</span>
-            </p>
+            <br>
+            <p>Algunas de las situaciones más frecuentes en las que sería conveniente buscar nuestra representación en materia laboral: <span>Despido, Violación a las condiciones de trabajo y Acoso Laboral.</span></p>
           </div>
           <div class="col-lg-12" data-aos="fade-up" data-aos-delay="200">
             <ul>
               <li><i class="bi bi-check-circle"></i> <span>Despido</span></li>
-              <p>
-                Es cuando de manera unilateral el <span>patrón termina la relación laboral.</span>. Cuando esto ocurre de manera injustificada, el trabajador tiene derecho a recibir una indemnización equivalente a tres meses de sueldo, al pago proporcional de sus prestaciones como: el aguinaldo, vacaciones, prima vacacional y demás prestaciones a que usted tiene derecho.
+              <p>Es cuando de manera unilateral el <span>patrón termina la relación laboral.</span> Cuando esto ocurre de manera injustificada, el trabajador tiene derecho a recibir una indemnización equivalente a tres meses de sueldo, al pago proporcional de sus prestaciones como: el aguinaldo, vacaciones, prima vacacional y demás prestaciones a que usted tiene derecho.</p>
+              <br>
+              <p>En caso de ir a juicio con motivo de un despido injustificado, usted tiene derecho a recibir el pago de los salarios que hubiera percibido desde el despido y hasta por un plazo de doce meses posteriores.</p>
+              <p>Siempre que la terminación de la relación laboral sea imputable a su patrón, es ideal que usted nos consulte, esto porque el despido no siempre es tan obvio. Existe una serie de prácticas por parte de las empresas para:</p>
+              <p><span>a) Disfrazar las relaciones laborales:</span> Como pueden ser la celebración de contratos civiles.
               </p>
-              <p>
-                En caso de ir a juicio con motivo de un despido injustificado, usted tiene derecho a recibir el pago de los salarios que hubiera percibido desde el despido y hasta por un plazo de doce meses posteriores.
+              <p><span>b) Justificar de manera ilegal los despidos:</span> Como puede ser alegar la terminación del plazo del contrato a pesar de que el puesto de trabajo siga existiendo.
               </p>
-              <p>
-                Siempre que la terminación de la relación laboral sea imputable a su patrón, es ideal que usted nos consulte, esto porque el despido no siempre es tan obvio. Existe una serie de prácticas por parte de las empresas para:
-              </p>
-              <p><span>a)
-                Disfrazar las relaciones laborales:</span> Como pueden ser la celebración de contratos civiles.
-              </p>
-              <p><span>b)
-                Justificar de manera ilegal los despidos:</span> Como puede ser alegar la terminación del plazo del contrato a pesar de que el puesto de trabajo siga existiendo.
-              </p>
-              <p>
-                Otra razón para buscar nuestros servicios, es que, aunque usted haya dado motivos para su despido, eso no implica que su despido sea justificado, ya que sólo un experto podrá determinar si la causal aplica o si no ha prescrito.
-              </p>
+              <p>Otra razón para buscar nuestros servicios, es que, aunque usted haya dado motivos para su despido, eso no implica que su despido sea justificado, ya que sólo un experto podrá determinar si la causal aplica o si no ha prescrito.</p>
               <li><i class="bi bi-check-circle"></i> <span>Violación a las condiciones de trabajo</span></li>
-              <p>
-                Las condiciones de trabajo son <span>los términos y las condiciones de su contrato laboral.</span> Recuerde que, aunque no exista un acuerdo por escrito, no significa que su empleador pueda modificar de manera unilateral las prestaciones que tienen pactadas como pueden ser la adscripción, el salario, el horario o las vacaciones.
-              </p>
-              <p>
-                  En caso de que el patrón incumpla con las mismas, el trabajador tendrá derecho a rescindir la relación laboral de manera justificada, por lo que tendrá derecho a ser indemnizado como si hubiera sido objeto de un despido injustificado.
-              </p>
-              <li><i class="bi bi-check-circle"></i> <span>Acoso</span></li>
-              <p>
-                También llamado <span>mobbing</span>, es cuando de manera sistemática <span>un trabajador es objeto de molestia o intimidación</span> por parte de su patrón o de sus compañeros a través de acciones tendientes a buscar su renuncia.
-              </p>
-              <p>
-                  En el primero de los casos, se actualizan las causales para terminar la relación de trabajo sin responsabilidad para el trabajador y este podrá demandar solicitando una indemnización igual a la que recibiría si fuese despedido de manera injustificada.
-              </p>
-              <p>
-                  Ahora que, si el acoso fuera por parte de sus compañeros, el trabajador podrá terminar la relación laboral y demandar su liquidación laboral o bien exigir una indemnización por daños y perjuicios.
-              </p>
-              <p>
-                  Esto porque, aunque podría parecer que esto no es responsabilidad del patrón, la Ley Federal del Trabajo establece que es obligación de este el mantener un ambiente de trabajo sano en el centro de trabajo.
-              </p>
+              <p>Las condiciones de trabajo son <span>los términos y las condiciones de su contrato laboral.</span> Recuerde que, aunque no exista un acuerdo por escrito, no significa que su empleador pueda modificar de manera unilateral las prestaciones que tienen pactadas como pueden ser la adscripción, el salario, el horario o las vacaciones.</p>
+              <p>En caso de que el patrón incumpla con las mismas, el trabajador tendrá derecho a rescindir la relación laboral de manera justificada, por lo que tendrá derecho a ser indemnizado como si hubiera sido objeto de un despido injustificado.</p>
+              <li><i class="bi bi-check-circle"></i> <span>Acoso Laboral</span></li>
+              <p>También llamado <span>mobbing</span>, es cuando de manera sistemática <span>un trabajador es objeto de molestia o intimidación</span> por parte de su patrón o de sus compañeros a través de acciones tendientes a buscar su renuncia.</p>
+              <p>En el primero de los casos, se actualizan las causales para terminar la relación de trabajo sin responsabilidad para el trabajador y este podrá demandar solicitando una indemnización igual a la que recibiría si fuese despedido de manera injustificada.</p>
+              <p>Ahora que, si el acoso fuera por parte de sus compañeros, el trabajador podrá terminar la relación laboral y demandar su liquidación laboral o bien exigir una indemnización por daños y perjuicios.</p>
+              <p>Esto porque, aunque podría parecer que esto no es responsabilidad del patrón, la Ley Federal del Trabajo establece que es obligación de este el mantener un ambiente de trabajo sano en el centro de trabajo.</p>
             </ul>
-            <p>
-              En <span>ABOGADOS GARCÍA AGUILAR & ASOCIADOS</span> le ayudaremos no sólo a saber si usted fue objeto de una injusticia, sino que le indicaremos el camino que debe seguir para ser compensado y a cuánto asciende dicha compensación.
-            </p>
-            <p>
-              Nuestra representación en <span>materia laboral</span>, consta de dos áreas, <span>consultoría y litigio</span>.
-            </p>
+            <p>En <span>ABOGADOS GARCÍA AGUILAR & ASOCIADOS</span> le ayudaremos no sólo a saber si usted fue objeto de una injusticia, sino que le indicaremos el camino que debe seguir para ser compensado y a cuánto asciende dicha compensación.</p>
+            <p>Nuestra representación en <span>materia laboral</span>, consta de dos áreas, <span>consultoría y litigio</span>.</p>
             <ul>
-              <li><i class="bi bi-bookmark-check"></i> <span>Consultoria</span></li>
-              <p>
-                Evaluamos los diversos aspectos de posibles riesgos, así como la revisión y corrección de la documentación necesaria a lo largo de la relación laboral, brindando asesoría preventiva, estratégica e integral para la adecuación de políticas y procesos en su empresa o negocio.
-              </p>
+              <li>
+                <i class="bi bi-bookmark-check"></i> <span>Consultoria</span>
+              </li>
+              <p>Evaluamos los diversos aspectos de posibles riesgos, así como la revisión y corrección de la documentación necesaria a lo largo de la relación laboral, brindando asesoría preventiva, estratégica e integral para la adecuación de políticas y procesos en su empresa o negocio.</p>
               <ul>
-                <li><i class="bi bi-chat-right-quote"></i>Evaluación de riesgos en materia laboral.</li>
-                <li><i class="bi bi-chat-right-quote"></i>Elaboración, revisión y actualización de documentos antes, durante y al término de la relación laboral.</li>
-                <li><i class="bi bi-chat-right-quote"></i>Elaboración, revisión y actualización de la siguiente documentación:</li>
+                <li>
+                  <i class="bi bi-chat-right-quote"></i>Evaluación de riesgos en materia laboral.
+                </li>
+                <li>
+                  <i class="bi bi-chat-right-quote"></i>Elaboración, revisión y actualización de documentos antes, durante y al término de la relación laboral.
+                </li>
+                <li>
+                  <i class="bi bi-chat-right-quote"></i>Elaboración, revisión y actualización de la siguiente documentación:
+                </li>
                 <ul>
-                  <li><i class="bi bi-chevron-double-right"></i>Contrato individual de trabajo</li>
-                  <li><i class="bi bi-chevron-double-right"></i>Contrato Colectivo de Trabajo</li>
-                  <li><i class="bi bi-chevron-double-right"></i>Reglamento Interior de Trabajo</li>
-                  <li><i class="bi bi-chevron-double-right"></i>Contratos por tiempo y obra determinado.</li>
+                  <li>
+                    <i class="bi bi-chevron-double-right"></i>Contrato individual de trabajo.
+                  </li>
+                  <li>
+                    <i class="bi bi-chevron-double-right"></i>Contrato Colectivo de Trabajo.
+                  </li>
+                  <li>
+                    <i class="bi bi-chevron-double-right"></i>Reglamento Interior de Trabajo.
+                  </li>
+                  <li>
+                    <i class="bi bi-chevron-double-right"></i>Contratos por tiempo y obra determinado.
+                  </li>
                 </ul>
-                <li><i class="bi bi-chat-right-quote"></i>Asesoría y apoyo integral en procesos para terminación de relaciones laborales.</li>
-                <li><i class="bi bi-chat-right-quote"></i>Soporte en materia de depósito y registro de Contratos Colectivos de Trabajo.</li>
-                <li><i class="bi bi-chat-right-quote"></i>Resolución de conflictos en materia laboral.</li>
-                <li><i class="bi bi-chat-right-quote"></i>Conflictos colectivos de naturaleza económica.</li>
+                <li>
+                  <i class="bi bi-chat-right-quote"></i>Asesoría y apoyo integral en procesos para terminación de relaciones laborales.
+                </li>
+                <li>
+                  <i class="bi bi-chat-right-quote"></i>Soporte en materia de depósito y registro de Contratos Colectivos de Trabajo.
+                </li>
+                <li>
+                  <i class="bi bi-chat-right-quote"></i>Resolución de conflictos en materia laboral.
+                </li>
+                <li>
+                  <i class="bi bi-chat-right-quote"></i>Conflictos colectivos de naturaleza económica.
+                </li>
               </ul>
               <li><i class="bi bi-bookmark-check"></i> <span>Litigio</span></li>
-              <p>
-                En el área de litigio atendemos y damos solución a toda clase de conflictos relacionados con el ámbito laboral a través de asesoría integral y personalizada, además, ofrecemos a nuestros representados asesoría directa en contratos y negociaciones de tipo individual y colectivo.
-              </p>
+              <p>En el área de litigio atendemos y damos solución a toda clase de conflictos relacionados con el ámbito laboral a través de asesoría integral y personalizada, además, ofrecemos a nuestros representados asesoría directa en contratos y negociaciones de tipo individual y colectivo.</p>
               <ul>
-                <li><i class="bi bi-chat-right-quote"></i>Atención y solución de toda clase de conflictos ante autoridades laborales.</li>
-                <li><i class="bi bi-chat-right-quote"></i>Atención y solución de demandas por despido.</li>
-                <li><i class="bi bi-chat-right-quote"></i>Atención en caso de emplazamiento a huelga.</li>
-                <li><i class="bi bi-chat-right-quote"></i>Elaboración, depósito y trámite de avisos de despido justificado.</li>
-                <li><i class="bi bi-chat-right-quote"></i>Juicios de amparo en materia laboral.</li>
-                <li><i class="bi bi-chat-right-quote"></i>Revisiones y negociaciones de contratos colectivos de trabajo.</li>
-                <li><i class="bi bi-chat-right-quote"></i>Declaraciones de beneficiarios por trabajadores fallecidos.</li>
-                <li><i class="bi bi-chat-right-quote"></i>Negociaciones y conciliaciones de asuntos laborales individuales y colectivos.</li>
-                <li><i class="bi bi-chat-right-quote"></i>Brindamos asesoría y representación legal en materia laboral a los trabajadores, sus beneficiarios y sindicatos, defendiendo sus intereses y derechos constituidos ante el patrón y los Tribunales del trabajo.</li>
-                <li><i class="bi bi-chat-right-quote"></i>Exhortamos a las partes en conflicto para que por la vía conciliatoria resuelvan sus diferencias, cuidando siempre los intereses de la parte trabajadora.</li>
-                <li><i class="bi bi-chat-right-quote"></i>Procedemos por la vía legal a través de la demanda laboral correspondiente, que el Tribunal Laboral competente emita una resolución en la que condene al patrón, al pago de las prestaciones devengadas, el cumplimiento de una obligación, o el reconocimiento de un derecho, a favor del Trabajador, su Sindicato o Beneficiarios.</li>
-                <li><i class="bi bi-chat-right-quote"></i>Obtenemos por la vía legal a través de la demanda laboral correspondiente, para el trabajador, su Sindicato o beneficiarios, el pago de las prestaciones devengadas o reconocidas en los laudos, sentencias y/o convenios aprobados y sancionados por la Autoridad Laboral.</li>
+                <li>
+                  <i class="bi bi-chat-right-quote"></i>Atención y solución de toda clase de conflictos ante autoridades laborales.
+                </li>
+                <li>
+                  <i class="bi bi-chat-right-quote"></i>Atención y solución de demandas por despido.
+                </li>
+                <li>
+                  <i class="bi bi-chat-right-quote"></i>Atención en caso de emplazamiento a huelga.
+                </li>
+                <li>
+                  <i class="bi bi-chat-right-quote"></i>Elaboración, depósito y trámite de avisos de despido justificado.
+                </li>
+                <li>
+                  <i class="bi bi-chat-right-quote"></i>Juicios de amparo en materia laboral.
+                </li>
+                <li>
+                  <i class="bi bi-chat-right-quote"></i>Revisiones y negociaciones de contratos colectivos de trabajo.
+                </li>
+                <li>
+                  <i class="bi bi-chat-right-quote"></i>Declaraciones de beneficiarios por trabajadores fallecidos.
+                </li>
+                <li>
+                  <i class="bi bi-chat-right-quote"></i>Negociaciones y conciliaciones de asuntos laborales individuales y colectivos.
+                </li>
+                <li>
+                  <i class="bi bi-chat-right-quote"></i>Brindamos asesoría y representación legal en materia laboral a los trabajadores, sus beneficiarios y sindicatos, defendiendo sus intereses y derechos constituidos ante el patrón y los Tribunales del trabajo.
+                </li>
+                <li><i class="bi bi-chat-right-quote"></i>Exhortamos a las partes en conflicto para que por la vía conciliatoria resuelvan sus diferencias, cuidando siempre los intereses de la parte trabajadora.
+                </li>
+                <li>
+                  <i class="bi bi-chat-right-quote"></i>Procedemos por la vía legal a través de la demanda laboral correspondiente, para que el Tribunal Laboral competente emita una resolución en la que condene al patrón, al pago de las prestaciones devengadas, el cumplimiento de una obligación, o el reconocimiento de un derecho, a favor del Trabajador, su Sindicato o Beneficiarios.
+                </li>
+                <li>
+                  <i class="bi bi-chat-right-quote"></i>Obtenemos por la vía legal a través de la demanda laboral correspondiente, para el trabajador, su Sindicato o beneficiarios, el pago de las prestaciones devengadas o reconocidas en los laudos, sentencias y/o convenios aprobados y sancionados por la Autoridad Laboral.
+                </li>
               </ul>
             </ul>
           </div>
