--- a/s-seguro.html
+++ b/s-seguro.html
@@ -46,8 +46,8 @@
         <div class="contact-info d-flex align-items-center">
           <i class="bi bi-phone d-flex align-items-center ms-4">
             <div>
-              <a href="tel:+525581030007"><span class="contact-info-tel">55 8103 0007</span></a>
-              <a href="tel:+5272264769127"><span class="contact-info-tel">72 2647 6912</span></a>
+              <span><a href="tel:+525581030007" class="contact-info-tel"></a>55 8103 0007</span>
+              <span><a href="tel:+527226476912" class="contact-info-tel"></a>72 2647 6912</span>
             </div>
           </i>
         </div>
