--- a/s-laboral.html
+++ b/s-laboral.html
@@ -115,7 +115,7 @@
           <div class="col-lg-12" data-aos="fade-up" data-aos-delay="200">
             <ul>
               <li><i class="bi bi-check-circle"></i> <span>Despido</span></li>
-              <p>Es cuando de manera unilateral el <span>patrón termina la relación laboral.</span> Cuando esto ocurre de manera injustificada, el trabajador tiene derecho a recibir una indemnización equivalente a tres meses de sueldo, al pago proporcional de sus prestaciones como: el aguinaldo, vacaciones, prima vacacional y demás prestaciones a que usted tiene derecho.</p>
+              <p>Es cuando de manera unilateral el <span>patrón termina la relación laboral.</span> Cuando esto ocurre de manera injustificada, el trabajador tiene derecho a recibir una indemnización equivalente a tres meses de salaro, al pago proporcional de sus prestaciones como: el aguinaldo, vacaciones, prima vacacional y demás prestaciones a que usted tiene derecho.</p>
               <br>
               <p>En caso de ir a juicio con motivo de un despido injustificado, usted tiene derecho a recibir el pago de los salarios que hubiera percibido desde el despido y hasta por un plazo de doce meses posteriores.</p>
               <p>Siempre que la terminación de la relación laboral sea imputable a su patrón, es ideal que usted nos consulte, esto porque el despido no siempre es tan obvio. Existe una serie de prácticas por parte de las empresas para:</p>
