Actualizar s-laboral.html

--- a/s-laboral.html
+++ b/s-laboral.html
@@ -118,7 +118,9 @@
               <p>Es cuando de manera unilateral el <span>patrón termina la relación laboral.</span> Cuando esto ocurre de manera injustificada, el trabajador tiene derecho a recibir una indemnización equivalente a tres meses de salario, al pago proporcional de sus prestaciones como: el aguinaldo, vacaciones, prima vacacional y demás prestaciones a que usted tiene derecho.</p>
               <br>
               <p>En caso de ir a juicio con motivo de un despido injustificado, usted tiene derecho a recibir el pago de los salarios que hubiera percibido desde el despido y hasta por un plazo de doce meses posteriores.</p>
-              <p>Siempre que la terminación de la relación laboral sea imputable a su patrón, es ideal que usted nos consulte, esto porque el despido no siempre es tan obvio. Existe una serie de prácticas por parte de las empresas para:</p>
+              <p>Siempre que la terminación de la relación laboral sea imputable a su patrón, es ideal que usted nos consulte, esto porque el despido no siempre es tan obvio.</p>
+              <br>
+              <p>Existe una serie de prácticas por parte de las empresas para:</p>
               <p><span>a) Disfrazar las relaciones laborales:</span> Como pueden ser la celebración de contratos civiles.
               </p>
               <p><span>b) Justificar de manera ilegal los despidos:</span> Como puede ser alegar la terminación del plazo del contrato a pesar de que el puesto de trabajo siga existiendo.
