Actualizar s-seguro.html

--- a/s-seguro.html
+++ b/s-seguro.html
@@ -104,7 +104,7 @@
             </div>
             <h4>Reconocer es Vivir</h4>
             <p>
-              Las Enfermedades Laborales perjudican gravemente tu salud, incluso, matan, <span>son daños derivados del trabajo:</span> las enfermedades, patologías o lesiones sufridas con motivo u ocasión del trabajo. 
+              Las Enfermedades Laborales perjudican gravemente su salud, incluso, matan, <span>son daños derivados del trabajo:</span> las enfermedades, patologías o lesiones sufridas con motivo u ocasión del trabajo. 
             </p>
           </div>
           <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
