--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
     <!-- Cards Section -->
     <section id="cards" class="cards section">
-      <div class="container">
+      <div class="container .stretched-link">
         <div class="row gy-4">
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-item  position-relative">
@@ -176,12 +176,12 @@
             <div class="text-center">
               <h3></h3>
               <p></p>
-              <!-- <a class="cta-btn" href="#"></a> -->
             </div>
           </div>
         </div>
       </div>
-    </section><!-- /Call To Action Section -->
+    </section>
+    <!-- Call To Action Section -->
 
     <!-- Services Section -->
     <section id="services" class="services section">
@@ -191,14 +191,14 @@
         <h2>Servicio</h2>
         <p>Asesoría y consultoría especializada</p>
       </div><!-- End Section Title -->
-      <div class="container">
+      <div class="container stretched-link">
         <div class="row gy-4">
           <div class="col-lg-6 col-md-8" data-aos="fade-up" data-aos-delay="100">
             <div class="service-item position-relative">
               <div class="icon">
                  <img src="assets/img/dl.png" alt="">
               </div>
-              <a href="s-laboral.html" class="stretched-link"><h3>Derecho Laboral</h3></a>
+              <a href="s-laboral.html"><h3>Derecho Laboral</h3></a>
               <p>Podemos afirmar que un trabajador se encuentra siempre en una situación vulnerable frente a su patrón.</p>
             </div>
           </div><!-- End Service Item -->
