--- a/s-seguro.html
+++ b/s-seguro.html
@@ -130,7 +130,7 @@
               <li><i class="bi bi-check-circle"><span> Psicosociales: </span> exigencias emocionales, exigencias laborales, estrés, alto ritmo de trabajo, etc.</i> </li>
             </ul>
             <p>
-              Síntoma de enfermedades profesionales
+              Síntoma de enfermedades profesionales:
             </p>
             <p>
               Los síntomas de las enfermedades profesionales pueden ser <span>físicos o psicológicos</span>, según la causa de la lesión.
@@ -220,7 +220,7 @@
             </p>
             <ul>
               <li><i class="bi bi-chat-right-quote"></i>Interrupción del acceso a tratamientos médicos necesarios.</li>
-              <li><i class="bi bi-chat-right-quote"></i>Dificultades económicas debido a la falta de beneficios</li>
+              <li><i class="bi bi-chat-right-quote"></i>Dificultades económicas debido a la falta de beneficios.</li>
               <li><i class="bi bi-chat-right-quote"></i>Estrés y ansiedad causados por la incertidumbre y la lucha por los derechos que le han sido negados.</li>
             </ul>
             <h4>Necesidades de contar con un Abogado Especialista en Seguridad Social</h4>
