--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <span>Nosotros<br></span>
+        <span class="span-title">Nosotros<br></span>
         <h2>Nosotros<br></h2>
-        <p>Somos una firma de abogados especialistas con más de 25 años de experiencia en Derecho Laboral, Derecho de la Seguridad Social, Derecho Fiscal y Asuntos de Negligencia Médica, cuyo objetivo fundamental es brindar a nuestros representados la protección más amplia de su patrimonio.</p>
+        <p>Somos una firma de abogados especialistas con más de 25 años de experiencia en <span class="span-p">Derecho Laboral, Derecho de la Seguridad Social, Derecho Fiscal y Asuntos de Negligencia Médica</span>, cuyo objetivo fundamental es brindar a nuestros representados la protección más amplia de su patrimonio.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -187,7 +187,7 @@
     <section id="services" class="services section">
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <span>Servicio</span>
+        <span class="span-title">Servicio</span>
         <h2>Servicio</h2>
         <p>Asesoría y consultoría especializada</p>
       </div><!-- End Section Title -->
@@ -256,7 +256,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <span>Contacto</span>
+        <span class="span-title">Contacto</span>
         <h2>Contacto</h2>
         <p>Atendemos a nuestros representandos en toda la República Mexicana de forma presencial o a través de ZOOM.</p>
         <br>
