--- a/s-medico.html
+++ b/s-medico.html
@@ -122,23 +122,16 @@
               <div data-aos="zoom-in-right" data-aos-duration="1000">
                   <details>
                       <summary>¿Existen tipos de negligencias médicas? ¿Cuáles?</summary>
-                      <p>Sí, existen varios tipos de negligencias médicas, cada uno de los cuales puede tener efectos perjudiciales distintos para los pacientes. Algunos de los tipos más comunes incluyen:</p>
-                      <ul>
-                        <li><i class="bi bi-check-circle"></i>Negligencia diagnóstica.-</li>
-                        <p>Esta forma de negligencia médica ocurre cuando un médico no realiza un diagnóstico correcto o no lo hace a tiempo, lo que puede retrasar el tratamiento adecuado.</p>
-                        <li><i class="bi bi-check-circle"></i>Negligencia en el tratamiento.-</li>
-                        <p>Esto implica que un profesional de la salud proporciona un tratamiento incorrecto o inadecuado, lo que puede agravar la condición del paciente o causar nuevos problemas de salud.</p>
-                        <li><i class="bi bi-check-circle"></i>Negligencia quirúrgica.-</li>
-                        <p>Incluye errores durante procedimientos quirúrgicos, como la operación en el sitio equivocado o la realización de una cirugía innecesaria o lesiones inadvertidas de otras estructuras.</p>
-                        <li><i class="bi bi-check-circle"></i>Negligencia en la medicación.-</li>
-                        <p>Se refiere a errores en la prescripción, administración o supervisión de medicamentos, como la prescripción de dosis incorrectas o la falta de atención a las interacciones medicamentosas.</p>
-                        <li><i class="bi bi-check-circle"></i>Negligencia en el seguimiento.-</li>
-                        <p>Implica la falta de seguimiento adecuado después de un tratamiento o procedimiento médico, lo que puede resultar en complicaciones no detectadas.</p>
-                      </ul>
-                      <p>
+                      <p class="p-faq">Sí, existen varios tipos de negligencias médicas, cada uno de los cuales puede tener efectos perjudiciales distintos para los pacientes. Algunos de los tipos más comunes incluyen:</p>
+                        <p class="p-faq"><i class="bi bi-check-circle"></i> Negligencia diagnóstica.- Esta forma de negligencia médica ocurre cuando un médico no realiza un diagnóstico correcto o no lo hace a tiempo, lo que puede retrasar el tratamiento adecuado.</p>
+                        <p class="p-faq"><i class="bi bi-check-circle"></i> Negligencia en el tratamiento.- Esto implica que un profesional de la salud proporciona un tratamiento incorrecto o inadecuado, lo que puede agravar la condición del paciente o causar nuevos problemas de salud.</p>
+                        <p class="p-faq"><i class="bi bi-check-circle"></i> Negligencia quirúrgica.- Incluye errores durante procedimientos quirúrgicos, como la operación en el sitio equivocado o la realización de una cirugía innecesaria o lesiones inadvertidas de otras estructuras.</p>
+                        <p class="p-faq"><i class="bi bi-check-circle"></i> Negligencia en la medicación.- Se refiere a errores en la prescripción, administración o supervisión de medicamentos, como la prescripción de dosis incorrectas o la falta de atención a las interacciones medicamentosas.</p>
+                        <p class="p-faq"><i class="bi bi-check-circle"></i> Negligencia en el seguimiento.- Implica la falta de seguimiento adecuado después de un tratamiento o procedimiento médico, lo que puede resultar en complicaciones no detectadas.</p>
+                      <p class="p-faq">
                         Si cree haber sufrido en su persona o en algún familiar negligencia médica, contáctenos y reclame la indemnización que legalmente merece.
                       </p>
-                      <p>
+                      <p class="p-faq">
                           Usted puede entablar acciones legales para reclamar una indemnización económica por el dolor y sufrimiento ocasionados.
                       </p>
                   </details>
@@ -146,16 +139,11 @@
               <div data-aos="zoom-in-right" data-aos-duration="1000">
                   <details>
                       <summary>¿Cuáles son los pasos a seguir en una investigación de negligencias médicas?</summary>
-                      <p>La investigación de negligencias médicas sigue un proceso cuidadoso para determinar si realmente ha ocurrido una negligencia.</p>
+                      <p class="p-faq">La investigación de negligencias médicas sigue un proceso cuidadoso para determinar si realmente ha ocurrido una negligencia.</p>
                       <p>Los pasos típicos incluyen:</p>
-                      <ul>
-                        <li><i class="bi bi-check-circle"></i>Revisión de antecedentes.-</li>
-                        <p>Se recopilan todos los registros médicos relacionados con el paciente y su atención médica, incluyendo diagnósticos, tratamientos, cirugías, y prescripciones.</p>
-                        <li><i class="bi bi-check-circle"></i>Análisis de expertos.-</li>
-                        <p>Se buscan opiniones de expertos médicos independientes para evaluar si se cumplieron los estándares en cuanto a diagnóstico, tratamiento y seguimiento.</p>
-                        <li><i class="bi bi-check-circle"></i>Negociación o litigio.-</li>
-                        <p>Dependiendo de los hallazgos, se pueden buscar acuerdos fuera de los tribunales o proceder con una demanda legal en busca de compensación.</p>
-                      </ul>
+                      <p class="p-faq"><i class="bi bi-check-circle"></i> Revisión de antecedentes.- Se recopilan todos los registros médicos relacionados con el paciente y su atención médica, incluyendo diagnósticos, tratamientos, cirugías, y prescripciones.</p>
+                      <p class="p-faq"><i class="bi bi-check-circle"></i> Análisis de expertos.- Se buscan opiniones de expertos médicos independientes para evaluar si se cumplieron los estándares en cuanto a diagnóstico, tratamiento y seguimiento.</p>
+                      <p class="p-faq"><i class="bi bi-check-circle"></i> Negociación o litigio.- Dependiendo de los hallazgos, se pueden buscar acuerdos fuera de los tribunales o proceder con una demanda legal en busca de compensación.</p>
                   </details>
               </div>
             </div>
