--- a/s-seguro.html
+++ b/s-seguro.html
@@ -246,94 +246,93 @@
               <div data-aos="zoom-in-right" data-aos-duration="1000">
                   <details>
                       <summary>¿Se puede demandar al IMSS</summary>
-                      <p>Sí, es posible demandar al IMSS en México.</p>
+                      <p class="p-faq">Sí, es posible demandar al IMSS en México.</p>
                   </details>
               </div>
               <div data-aos="zoom-in-left" data-aos-duration="1000">
                   <details>
                       <summary>¿Cuáles son las razones por las se puede demandar al IMSS?</summary>
-                      <ul>
-                        <li><i class="bi bi-arrow-right-square"></i>Negligencia Médica</li>
-                        <li><i class="bi bi-arrow-right-square"></i>Falta de Medicamentos</li>
-                        <li><i class="bi bi-arrow-right-square"></i>Negación de Servicios Médicos</li>
-                        <li><i class="bi bi-arrow-right-square"></i>Denegación de Pensión</li>
-                        <li><i class="bi bi-arrow-right-square"></i>Retrasos Injustificados</li>
-                        <li><i class="bi bi-arrow-right-square"></i>Cálculo Incorrecto de Beneficios</li>
-                      </ul>
+                        <p class="p-faq"><i class="bi bi-box-arrow-right"></i> Negligencia Médica</p>
+                        <p class="p-faq"><i class="bi bi-box-arrow-right"></i> Falta de Medicamentos</p>
+                        <p class="p-faq"><i class="bi bi-box-arrow-right"></i> Negación de Servicios Médicos</p>
+                        <p class="p-faq"><i class="bi bi-box-arrow-right"></i> Denegación de Pensión</p>
+                        <p class="p-faq"><i class="bi bi-box-arrow-right"></i> Retrasos Injustificados</p>
+                        <p class="p-faq"><i class="bi bi-box-arrow-right"></i> Cálculo Incorrecto de Beneficios</p>
+
                   </details>
               </div>
               <div data-aos="zoom-in-right" data-aos-duration="1000">
                   <details>
                       <summary>¿Cómo puedo demandar al IMSS?</summary>
-                      <p>Si usted enfrenta a una situación donde necesita demandar al Seguro Social (IMSS) en México porque no están cumpliendo con sus obligaciones, ya sea no pagando una pensión, negando servicios médicos adecuados u otra disputa, puede seguir varios pasos para iniciar un proceso legal.</p>
-                      <p>Aquí le explicamos cómo proceder:</p>
-                      <p> <span>1.</span> Contáctenos para recibir asesoría de un abogado especializado en derecho de la seguridad social.</p>
-                      <p> <span>2.</span> De ser necesario el siguiente paso sería presentar una demanda ante un tribunal competente.</p>
-                      <p> <span>3.</span> Llevar a cabo el juicio, presentando pruebas y argumentos.</p>
-                      <p> <span>4.</span> En caso de ganar, el IMSS tendrá que cumplir con la sentencia.</p>
+                      <p class="p-faq">Si usted enfrenta a una situación donde necesita demandar al Seguro Social (IMSS) en México porque no están cumpliendo con sus obligaciones, ya sea no pagando una pensión, negando servicios médicos adecuados u otra disputa, puede seguir varios pasos para iniciar un proceso legal.</p>
+                      <p class="p-faq">Aquí le explicamos cómo proceder:</p>
+                      <p class="p-faq"> <span>1.</span> Contáctenos para recibir asesoría de un abogado especializado en derecho de la seguridad social.</p>
+                      <p class="p-faq"> <span>2.</span> De ser necesario el siguiente paso sería presentar una demanda ante un tribunal competente.</p>
+                      <p class="p-faq"> <span>3.</span> Llevar a cabo el juicio, presentando pruebas y argumentos.</p>
+                      <p class="p-faq"> <span>4.</span> En caso de ganar, el IMSS tendrá que cumplir con la sentencia.</p>
                   </details>
               </div>
               <div data-aos="zoom-in-right" data-aos-duration="1000">
                   <details>
                       <summary>¿Qué puedo hacer si el IMSS no tiene las medicinas que necesito?</summary>
-                      <p>En México si el IMSS no proporciona los medicamentos que usted o un familiar necesita y estos son esenciales para su tratamiento, usted puede interponer un amparo.</p>
-                      <p>Esto es especialmente conveniente si no tiene los recursos para comprarlos por su cuenta. </p>
-                      <p>El amparo es un recurso legal diseñado para proteger los derechos constitucionales de los ciudadanos cuando consideran que una autoridad está violando esos derechos.</p>
+                      <p class="p-faq">En México si el IMSS no proporciona los medicamentos que usted o un familiar necesita y estos son esenciales para su tratamiento, usted puede interponer un amparo.</p>
+                      <p class="p-faq">Esto es especialmente conveniente si no tiene los recursos para comprarlos por su cuenta. </p>
+                      <p class="p-faq">El amparo es un recurso legal diseñado para proteger los derechos constitucionales de los ciudadanos cuando consideran que una autoridad está violando esos derechos.</p>
                   </details>
               </div>
               <div data-aos="zoom-in-right" data-aos-duration="1000">
                   <details>
                       <summary>¿Por qué es conveniente contratar a un abogado especialista en seguridad social?</summary>
-                      <p>Contratar a un abogado especialista en seguridad social es importante debido a la complejidad de las leyes y procedimientos que regulan los beneficios. Un abogado navegará eficazmente el sistema, asegurando el cumplimiento de los requisitos legales y aumentando las oportunidades de obtener los beneficios adecuados. Adicionalmente, un abogado evitará errores y en caso de requerirse podrá identificar y resolver rápidamente cualquier problema que se presente y de ser necesario accionar apelaciones o demandas para proteger los derechos de los clientes.</p>
+                      <p class="p-faq">Contratar a un abogado especialista en seguridad social es importante debido a la complejidad de las leyes y procedimientos que regulan los beneficios. Un abogado navegará eficazmente el sistema, asegurando el cumplimiento de los requisitos legales y aumentando las oportunidades de obtener los beneficios adecuados. Adicionalmente, un abogado evitará errores y en caso de requerirse podrá identificar y resolver rápidamente cualquier problema que se presente y de ser necesario accionar apelaciones o demandas para proteger los derechos de los clientes.</p>
                   </details>
               </div>
               <div data-aos="zoom-in-right" data-aos-duration="1000">
                   <details>
                       <summary>¿Cuáles son mis derechos bajo el sistema de seguridad social?</summary>
-                      <p>Contratar a un abogado especialista en seguridad social es importante debido a la complejidad de las leyes y procedimientos que regulan los beneficios. Un abogado navegará eficazmente el sistema, asegurando el cumplimiento de los requisitos legales y aumentando las oportunidades de obtener los beneficios adecuados. Adicionalmente, un abogado evitará errores y en caso de requerirse podrá identificar y resolver rápidamente cualquier problema que se presente y de ser necesario accionar apelaciones o demandas para proteger los derechos de los clientes.</p>
+                      <p class="p-faq">Contratar a un abogado especialista en seguridad social es importante debido a la complejidad de las leyes y procedimientos que regulan los beneficios. Un abogado navegará eficazmente el sistema, asegurando el cumplimiento de los requisitos legales y aumentando las oportunidades de obtener los beneficios adecuados. Adicionalmente, un abogado evitará errores y en caso de requerirse podrá identificar y resolver rápidamente cualquier problema que se presente y de ser necesario accionar apelaciones o demandas para proteger los derechos de los clientes.</p>
                   </details>
               </div>
               <div data-aos="zoom-in-right" data-aos-duration="1000">
                   <details>
                       <summary>¿Bajo qué circunstancias puedo iniciar un litigio de seguridad social?</summary>
-                      <p>Si usted enfrenta a una situación donde necesita demandar al Seguro Social (IMSS) en México porque no están cumpliendo con sus obligaciones, ya sea no pagando una pensión, negando servicios médicos adecuados u otra disputa, puede seguir varios pasos para iniciar un proceso legal.</p>
-                      <p>Se puede iniciar un litigio de seguridad social si se considera que los derechos de una persona no han sido respetados, como en casos de:</p>
-                      <p> <span>•</span> Negativa de prestaciones o servicios a los que tienes derecho.</p>
-                      <p> <span>•</span> Cálculos incorrectos de pensiones.</p>
-                      <p> <span>•</span> Retrasos indebidos en la adjudicación de beneficios.</p>
-                      <p> <span>•</span> Mal manejo de las aportaciones o datos personales.</p>
+                      <p class="p-faq">Si usted enfrenta a una situación donde necesita demandar al Seguro Social (IMSS) en México porque no están cumpliendo con sus obligaciones, ya sea no pagando una pensión, negando servicios médicos adecuados u otra disputa, puede seguir varios pasos para iniciar un proceso legal.</p>
+                      <p class="p-faq">Se puede iniciar un litigio de seguridad social si se considera que los derechos de una persona no han sido respetados, como en casos de:</p>
+                      <p class="p-faq"> <i class="bi bi-box-arrow-right"></i> Negativa de prestaciones o servicios a los que tienes derecho.</p>
+                      <p class="p-faq"> <i class="bi bi-box-arrow-right"></i> Cálculos incorrectos de pensiones.</p>
+                      <p class="p-faq"> <i class="bi bi-box-arrow-right"></i> Retrasos indebidos en la adjudicación de beneficios.</p>
+                      <p class="p-faq"> <i class="bi bi-box-arrow-right"></i> Mal manejo de las aportaciones o datos personales.</p>
                   </details>
               </div>
               <div data-aos="zoom-in-right" data-aos-duration="1000">
                   <details>
                       <summary>¿Cuánto tiempo toma una demanda contra el seguro social?</summary>
-                      <p>El tiempo puede variar significativamente dependiendo del caso, pero un litigio de seguridad social puede tomar desde unos pocos meses hasta uno o dos años para resolverse, especialmente si hay apelaciones involucradas.</p>
+                      <p class="p-faq">El tiempo puede variar significativamente dependiendo del caso, pero un litigio de seguridad social puede tomar desde unos pocos meses hasta uno o dos años para resolverse, especialmente si hay apelaciones involucradas.</p>
                   </details>
               </div>
               <div data-aos="zoom-in-right" data-aos-duration="1000">
                   <details>
                       <summary>¿Cuáles son los costos asociados con una demanda de seguridad social?</summary>
-                      <p>Los costos pueden incluir honorarios de abogado, costos de corte y posiblemente costos de expertos o testigos. Muchos abogados pueden trabajar bajo un modelo de pago basado en el éxito del caso, lo que podría reducir los costos iniciales.</p>
+                      <p class="p-faq">Los costos pueden incluir honorarios de abogado, costos de corte y posiblemente costos de expertos o testigos. Muchos abogados pueden trabajar bajo un modelo de pago basado en el éxito del caso, lo que podría reducir los costos iniciales.</p>
                   </details>
               </div>
               <div data-aos="zoom-in-right" data-aos-duration="1000">
                   <details>
                       <summary>¿Es necesario contar con un abogado especializado en seguridad social?</summary>
-                      <p>Sí, es altamente recomendable contar con un abogado especializado en seguridad social, dado que estos casos pueden involucrar complejas normativas legales y procedimientos administrativos específicos que requieren un conocimiento experto.</p>
+                      <p class="p-faq">Sí, es altamente recomendable contar con un abogado especializado en seguridad social, dado que estos casos pueden involucrar complejas normativas legales y procedimientos administrativos específicos que requieren un conocimiento experto.</p>
                   </details>
               </div>
               <div data-aos="zoom-in-right" data-aos-duration="1000">
                   <details>
                       <summary>¿Qué otras alternativas existen además del litigio?</summary>
-                      <p> <span>•</span> Mediación o conciliación a través de la CONDUSEF o directamente con la institución.</p>
-                      <p> <span>•</span> Presentar una queja formal ante el órgano interno de control de la institución.</p>
-                      <p> <span>•</span> Utilizar mecanismos de apelación administrativa que ofrece la institución.</p>
+                      <p class="p-faq"> <i class="bi bi-box-arrow-right"></i> Mediación o conciliación a través de la CONDUSEF o directamente con la institución.</p>
+                      <p class="p-faq"> <i class="bi bi-box-arrow-right"></i> Presentar una queja formal ante el órgano interno de control de la institución.</p>
+                      <p class="p-faq"> <i class="bi bi-box-arrow-right"></i> Utilizar mecanismos de apelación administrativa que ofrece la institución.</p>
                   </details>
               </div>
               <div data-aos="zoom-in-right" data-aos-duration="1000">
                   <details>
                       <summary>¿Cuáles son las posibilidades de ganar un litigio?</summary>
-                      <p>Ganar un litigio de seguridad social depende de muchos factores, incluyendo la solidez de su caso, la calidad de la evidencia presentada, y la competencia de su representación legal o abogado.</p>
+                      <p class="p-faq">Ganar un litigio de seguridad social depende de muchos factores, incluyendo la solidez de su caso, la calidad de la evidencia presentada, y la competencia de su representación legal o abogado.</p>
                   </details>
               </div>
             </div>
