--- a/index.html
+++ b/index.html
@@ -193,16 +193,15 @@
       </div><!-- End Section Title -->
       <div class="container stretched-link">
         <div class="row gy-4">
-          <div class="col-lg-6 col-md-8" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-6 col-md-8" data-aos="fade-up" data-aos-delay="200">
             <div class="service-item position-relative">
               <div class="icon">
-                 <img src="assets/img/dl.png" alt="">
+                <img src="assets/img/dss.png" alt="">
               </div>
-              <a href="s-laboral.html"><h3>Derecho Laboral</h3></a>
+              <a href="s-laboral.html" class="stretched-link"><h3>Derecho Laboral</h3></a>
               <p>Podemos afirmar que un trabajador se encuentra siempre en una situación vulnerable frente a su patrón.</p>
             </div>
           </div><!-- End Service Item -->
-
           <div class="col-lg-6 col-md-8" data-aos="fade-up" data-aos-delay="200">
             <div class="service-item position-relative">
               <div class="icon">
