--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
         <h2>Contacto</h2>
         <p>Atendemos a nuestros representandos en toda la República Mexicana de forma presencial o a través de ZOOM.</p>
         <br>
-        <p>Le pedimos por favor, agendar previamente una cita, para atenderlo como Usted se merece</p>
+        <p>Le pedimos por favor, agendar previamente una cita, para atenderlo como Usted se merece.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
